# merit

./: .dockerignore  .env.example  .gitignore  AGENTS.md  BENCHMARK.md  DEPLOY.md  Dockerfile  LAUNCH-READINESS.md  PITCH.md  PUBLISHERS.md  README.md  SECURITY.md  TEST-PLAN.md  TRACTION.md  eslint.config.mjs  instrumentation.ts  next.config.ts  package-lock.json  package.json  render.yaml  vercel.json
app/: layout.tsx  not-found.tsx  page.tsx
benchmark/: README.md  catch.json
contracts/: .gitignore  deployments.json  foundry.toml
docs/: scalable-oversight.md  trust-api.md
lib/: adapters.ts  agent.ts  arc.ts  assets.ts  attest.ts  audit.ts  auth.ts  bench.ts  bounty.ts  bts.ts  cache.ts  custody.ts  db.ts  discover.ts  escrow.ts  feed.ts  ghost.ts  goldset.json  goldset.ts  hires.ts  history.ts  insurance.ts  job.ts  labor.ts  learn.ts  ledger.ts  llm.ts  locks.ts  market.ts  metrics.ts  negotiate.ts  numcheck.ts  passport.ts  pay.ts  planner.ts  policy.ts  pricing.ts  providers.ts  ratelimit.ts  receipt.ts  (+11 more)
merit-cvo/: LICENSE  README.md  pyproject.toml
merit-cvo/merit_cvo/: __init__.py  cli.py  engine.py  judge.py  nli.py  numeric.py
merit-cvo/merit_cvo/integrations/: __init__.py  langchain.py  llamaindex.py  ragas.py
merit-cvo/tests/: test_engine.py  test_integrations.py  test_numeric.py
nli-server/: DEPLOY.md  Dockerfile  README.md  requirements.txt  server.py
public/: benchmark.html  brandkit.html  break.html  honesty.html  index.html  onboard.html  passport.html  robots.txt  sitemap.xml
scripts/: accrue.mjs  audit-demo.mjs  audit-export.mjs  (+45 more)
(+105 files in other folders)
